--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,9 +3,28 @@
 @tailwind utilities;
 
 body {
-  background: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url("../public/bg.png");
+  background: url("../public/bg.png");
   background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+}
+
+::-webkit-scrollbar{
+  cursor: pointer;
+  width: 8px;
+}
+
+::-webkit-scrollbar-track{
+  cursor: pointer;
+  background: #555;
+}
+
+::-webkit-scrollbar-thumb{
+  border-radius: 5px;
+  background: #121212;
+}
+
+::-webkit-scrollbar-thumb:hover{
+  background: #242424;
 }
